feat: create a manyrecieps
