# src/common/api/receipt/receipt.mutations.ts
@@ -1,8 +1,10 @@
 import {
+  receiptControllerAddManyRecipes,
   receiptControllerAddRecipe,
   receiptControllerExtractReceiptFromPdf,
 } from '@/common/api/_base/receipt'
 import type {
+  ReceiptControllerAddManyRecipesBody,
   ReceiptControllerAddRecipeBody,
   ReceiptControllerExtractReceiptFromPdfBody,
 } from '@/common/api/_base/api-types.schemas'
@@ -14,6 +16,11 @@ type CreateReceiptMutationInput = {
   request: ReceiptControllerAddRecipeBody
 }
 
+type CreateManyReceiptsMutationInput = {
+  workspaceId: string
+  request: ReceiptControllerAddManyRecipesBody
+}
+
 type ExtractReceiptFromPdfMutationInput = {
   workspaceId: string
   request: ReceiptControllerExtractReceiptFromPdfBody
@@ -23,6 +30,20 @@ export const receiptMutationOptions = {
   createReceipt: mutationOptions({
     mutationFn: async ({ workspaceId, request }: CreateReceiptMutationInput) => {
       const response = await receiptControllerAddRecipe(
+        request,
+        { 'workspace-id': workspaceId },
+        {
+          headers: {
+            Authorization: `Bearer ${localStorage.getItem(LOCAL_STORAGE_KEYS.TOKEN)}`,
+          },
+        }
+      )
+      return response
+    },
+  }),
+  createManyReceipts: mutationOptions({
+    mutationFn: async ({ workspaceId, request }: CreateManyReceiptsMutationInput) => {
+      const response = await receiptControllerAddManyRecipes(
         request,
         { 'workspace-id': workspaceId },
         {
